# smart-heat

./: LICENSE  README.md  concept.txt  qgis_interface.py  requirements.txt  setup.cfg  structure.py  test.ipynb
