[metadata]
name = Smart Heat
author = Ron Kirchner
author_email = mail@p1xel.berlin
description = Script to optimize heat transportation in smart buildings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kiron030/smart-heat
license = MIT
license_file = LICENSE
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/Kiron030/smart-heat
    Tracker = https://github.com/Kiron030/smart-heat/issues

[options]
packages = find:
python_requires= >=3.8
install_requires = requirements.txt

[options.data_files]
. = requirements.txt
